--- a/css/character-page.css
+++ b/css/character-page.css
@@ -109,8 +109,7 @@ p{
 nav {
   background-color: #242527;
   color: white;
-  font-size: 1em;
-  font-family: sans-serif;   
+  font-size: 1em;  
 }
 
 .menus {
@@ -167,4 +166,42 @@ nav {
   text-decoration: none;
   color: white;
   display: block;
+}
+
+@media (max-width: 800px) {
+  main {
+    width: 100%;
+    font-size: 0.7em;
+  }
+  p {
+    margin: 2vh;
+  }
+  .bio{
+    font-size: 0.9em;
+  }
+  nav {
+    font-size: 1.2em;
+  }
+  .menu-item {
+    font-size: 1em;
+  }
+}
+
+@media (max-device-width: 800px) {
+  main {
+    width: 100%;
+    font-size: 0.7em;
+  }
+  p {
+    margin: 2vh;
+  }
+  .bio{
+    font-size: 0.9em;
+  }
+  nav {
+    font-size: 1.2em;
+  }
+  .menu-item {
+    font-size: 1em;
+  }
 }
