header, form/survey structure

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,18 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@700&display=swap');
 
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 2em;
   background: rgb(36,37,39);
   background: linear-gradient(180deg, rgba(36,37,39,1) 0%, rgba(188,15,15,1) 100%);
-  margin: 0
+  margin: 0;
 }
 
 main {
   width: 50%;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 5px;
   box-sizing: border-box;
   border-color: black;
   border-width: 3px;
@@ -22,15 +21,34 @@ main {
   background-color: white;
 }
 
-h1{
+.header{
   font-size: 3em;
   font-family: 'Tangerine', cursive;
   font-weight: 550;
-  padding: 0.5em;
+  padding: 0.7em;
+  background: url("/images/hq.png");
+  background-position: center;
+  background-size: 100%;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin: 0;
+
 }
 
 h1,h2,p {
   text-align: center;
+}
+
+#red {
+  color: #ff4141;
+}
+
+figcaption{
+  text-align: center;
+  font-size: 0.9em;
+  margin: 1em;
+  margin-bottom: 3em;
+  font-weight: bold;
 }
 
 p{
