--- a/css/character-page.css
+++ b/css/character-page.css
@@ -3,9 +3,7 @@
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 2em;
-  /*background-image: url("/images/Idrium.jpg");
-  background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);*/
-  margin: 0
+  margin: 0;
   
 }
 
@@ -13,7 +11,6 @@ main {
   width: 50%;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 5px;
   box-sizing: border-box;
   border-color: black;
   border-width: 3px;
@@ -28,6 +25,23 @@ h1{
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   text-align: center;
+}
+
+.header{
+  font-size: 3em;
+  font-family: 'Tangerine', cursive;
+  font-weight: 550;
+  padding: 0.7em;
+  background: url("/images/hq.png");
+  background-position: center;
+  background-size: 100%;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin: 0;
+}
+
+#red {
+  color: #ff4141;
 }
 
 img {
@@ -45,6 +59,7 @@ p{
 .tagline{
   text-align: center;
   font-style: italic;
+  margin-bottom: 0.7em;
 }
 
 .bio {
@@ -55,6 +70,9 @@ p{
   font-style: italic;
   text-align: center;
   color:lightslategrey;
+  margin-bottom: 0;
+  margin-top: 2em;
+  transform: translateY(-0.5em);
 }
 
 .info{
@@ -62,29 +80,15 @@ p{
   font-size: 0.7em;
   background-color: rgb(234, 255, 228);
   align-items: center;
-  justify-content: stretch;
-}
-
-.stats{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.circle{
-  width: 2em;
-  line-height: 2em;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 1em;
-  border: 3px solid #000;
+  justify-content: space-between;
 }
 
 .statlist {
   display: flex;
   flex-direction: column;
   list-style-type: none;
-  width: 20em; 
+  width: 75%;
+  margin: 0 auto;
 }
 
 .statlist-item {
@@ -92,8 +96,8 @@ p{
   flex-direction: row;
   border-bottom:1px solid black;
   padding: 0.5em;
-  justify-content: space-between;
-  
+  justify-content: space-between;  
+  margin: 0;
 }
 
 .statvalhigh {
