--- a/css/character-page.css
+++ b/css/character-page.css
@@ -1,47 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@700&display=swap');
-
-body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 2em;
-  margin: 0;
-  
-}
-
-main {
-  width: 50%;
-  min-height: 100vh;
-  margin: 0 auto;
-  box-sizing: border-box;
-  border-color: black;
-  border-width: 3px;
-  border-style: solid;
-  border-top-style: none;
-  border-bottom-style: none;
-  background-color: white;
-}
-
 h1{
   font-size: 2.5em;
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   text-align: center;
-}
-
-.header{
-  font-size: 3em;
-  font-family: 'Tangerine', cursive;
-  font-weight: 550;
-  padding: 0.7em;
-  background: url("/images/hq.png");
-  background-position: center;
-  background-size: 100%;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  margin: 0;
-}
-
-#red {
-  color: #ff4141;
 }
 
 img {
@@ -57,9 +18,15 @@ p{
 }
 
 .tagline{
-  text-align: center;
   font-style: italic;
-  margin-bottom: 0.7em;
+  margin: 1em;
+  margin-bottom: 0px;
+}
+
+hr{
+  margin: 1.2em;
+  margin-top: 0px;
+  border-color: black;
 }
 
 .bio {
@@ -88,7 +55,6 @@ p{
   flex-direction: column;
   list-style-type: none;
   width: 75%;
-  margin: 0 auto;
 }
 
 .statlist-item {
@@ -96,8 +62,8 @@ p{
   flex-direction: row;
   border-bottom:1px solid black;
   padding: 0.5em;
-  justify-content: space-between;  
-  margin: 0;
+  justify-content: space-between;
+  font-size: 1.2em;
 }
 
 .statvalhigh {
@@ -108,92 +74,20 @@ p{
   color: red;
 }
 
-
-/* Nav Bar*/
-nav {
-  background-color: #242527;
-  color: white;
-  font-size: 1em;  
-}
-
-.menus {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-.menus, .menu-items {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.menu-heading, .menu-item > a {
-  padding: 5px 10px;
-}
-
-.menu-heading {
-  border-right: 1px solid lightgray;
-}
-
-.menu-item {
-  border-top: 1px solid lightgray;
-  font-size: 1em;
-}
-
-.menu {
-  position: relative;
-}
-
-.menu-items {
-  display: none;
-  position: absolute;
-  top: 100%;
-  background-color: #242527;
-}
-
-.menu:hover > .menu-items {
-  display: block;
-}
-
-.menu-item:hover, .menu:hover > .menu-heading {
-  background-color: rgb(80, 80, 80);
-}
-
-.menu-item > a {
-  text-decoration: none;
-  color: white;
-  display: block;
-}
-
-.menu-heading > a {
-  text-decoration: none;
-  color: white;
-  display: block;
-}
-
 @media (max-width: 800px) {
   main {
-    width: 100%;
     font-size: 0.7em;
-  }
-  p {
-    margin: 2vh;
   }
   .bio{
     font-size: 0.9em;
   }
   nav {
     font-size: 1.2em;
-  }
-  .menu-item {
-    font-size: 1em;
   }
 }
 
 @media (max-device-width: 800px) {
   main {
-    width: 100%;
     font-size: 0.7em;
   }
   p {
@@ -204,8 +98,5 @@ nav {
   }
   nav {
     font-size: 1.2em;
-  }
-  .menu-item {
-    font-size: 1em;
   }
 }
