--- a/css/dudo.css
+++ b/css/dudo.css
@@ -1,5 +1,5 @@
 body{
-  background: linear-gradient(180deg, rgba(40,122,47,1) 0%, rgba(238,255,240,1) 100%);
+  background-color: rgb(215, 255, 225);
 }
 img{
   width: 50%;
