--- a/css/jared.css
+++ b/css/jared.css
@@ -1,6 +1,5 @@
 body {
-  background: linear-gradient(180deg, rgba(68,79,230,1) 0%, rgba(242,238,255,1) 100%);
-}
+  background-color: rgb(222, 215, 255);}
 img{
   width: 50%;
   padding: 1em;
