--- a/css/miya.css
+++ b/css/miya.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(180deg, rgba(28,83,85,1) 0%, rgba(230,244,242,1) 100%);
+  background-color: rgb(158, 170, 194);
 }
 .info{
   font-size: 0.8em;
