--- a/css/character-page.css
+++ b/css/character-page.css
@@ -84,8 +84,12 @@ hr{
   nav {
     font-size: 1.2em;
   }
+  p {
+    margin: 2vh;
+  }
 }
 
+/*
 @media (max-device-width: 800px) {
   main {
     font-size: 0.7em;
@@ -99,4 +103,4 @@ hr{
   nav {
     font-size: 1.2em;
   }
-}
+}*/
