--- a/css/doc.css
+++ b/css/doc.css
@@ -1,3 +1,3 @@
 body {
-  background: linear-gradient(0deg, rgba(239,251,255,1) 0%, rgba(85,208,255,1) 100%);
+  background-color: rgb(218, 248, 255);
 }
