--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 2em;
   margin: 0;
+  background-color: #3c4044;
 }
 
 main {
@@ -41,16 +42,16 @@ main {
 }
 
 .bracer{
-display: flex;
-justify-content: center;
-align-items: center;
-width: 50%;
-margin:0 auto;
-transition: transform .7s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin:0 auto;
+  transition: transform .7s ease-in-out;
 }
 
 .bracer:hover{
-transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 /* Nav Bar*/
@@ -117,22 +118,6 @@ nav {
 }
 
 @media (max-width: 800px) {
-  main {
-    width: 100%;
-    font-size: 0.6em;
-  }
-  p {
-    margin: 2vh;
-  }
-  nav {
-    font-size: 1.5em;
-  }
-  .menu-item {
-    font-size: 1em;
-  }
-}
-
-@media (max-device-width: 800px) {
   main {
     width: 100%;
     font-size: 0.6em;
