--- a/css/olek.css
+++ b/css/olek.css
@@ -1,3 +1,3 @@
 body {
-  background: linear-gradient(180deg, rgba(157,112,58,1) 0%, rgba(255,245,238,1) 100%);
+  background-color: rgb(255, 238, 215);
 }
